--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,15 @@
     "@mui/material": "^7.3.2",
     "axios": "^1.12.2",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
